v1.0.12 correction IE,history, add favorites

--- a/css/design.css
+++ b/css/design.css
@@ -3,234 +3,3 @@
 /* *********************** */
 /* default no folder */
 
-.container {
-}
-
-.navbar-default{
-background-color:#00438c;border-color:grey;
-color:#e6e6fa;
-font-weight:bold;
-}
-.navbar-default .navbar-brand{
-color:#ffffff;
-}
-.navbar-default .navbar-brand:focus,.navbar-default .navbar-brand:hover{
-color:#ffffff;background-color:transparent
-}
-.navbar-default .navbar-text{
-color:#ffffff;
-}
-.navbar-default .navbar-nav>li>a{
-color:#e6e6fa;
-font-weight:bold;
-}
-.navbar-default .navbar-nav>li>a:focus,.navbar-default .navbar-nav>li>a:hover{
-color:#ffffff;background-color:#0056b3;
-}
-.navbar-default .navbar-nav>.active>a,.navbar-default .navbar-nav>.active>a:focus,.navbar-default .navbar-nav>.active>a:hover{
-color:#000000;background-color:#6d88ad;
-}
-.navbar-default .navbar-nav>.disabled>a,.navbar-default .navbar-nav>.disabled>a:focus,.navbar-default .navbar-nav>.disabled>a:hover{
-color:#ffffff;background-color:#0056b3;
-}
-.navbar-default .navbar-toggle{
-border-color:#ddd
-}
-.navbar-default .navbar-toggle:focus,.navbar-default .navbar-toggle:hover{
-background-color:#ddd
-}
-.navbar-default .navbar-toggle .icon-bar{
-background-color:#888
-}
-.navbar-default .navbar-collapse,.navbar-default .navbar-form{
-border-color:#e7e7e7
-}
-.navbar-default .navbar-nav>.open>a,.navbar-default .navbar-nav>.open>a:focus,.navbar-default .navbar-nav>.open>a:hover{
-color:#555;background-color:#e7e7e7
-}	
-.dropdown-menu{
-background-color:#b3d7ff;
-}
-.navbar-default .navbar-nav .open .dropdown-menu>li>a{
-color:#777;
-}
-.navbar-default .navbar-nav .open .dropdown-menu>li>a:focus,.navbar-default .navbar-nav .open .dropdown-menu>li>a:hover{
-color:#333;background-color:transparent
-}
-.navbar-default .navbar-nav .open .dropdown-menu>.active>a,.navbar-default .navbar-nav .open .dropdown-menu>.active>a:focus,.navbar-default .navbar-nav .open .dropdown-menu>.active>a:hover{
-color:#555;background-color:#e7e7e7
-}
-.navbar-default .navbar-nav .open .dropdown-menu>.disabled>a,.navbar-default .navbar-nav .open .dropdown-menu>.disabled>a:focus,.navbar-default .navbar-nav .open .dropdown-menu>.disabled>a:hover{
-color:#ccc;background-color:transparent
-}
-.navbar-default .navbar-link{
-color:#777
-}
-.navbar-default .navbar-link:hover{
-color:#333
-}
-.navbar-default .btn-link{
-color:#777
-}
-.navbar-default .btn-link:focus,.navbar-default .btn-link:hover{
-color:#333
-}
-.navbar-default .btn-link[disabled]:focus,.navbar-default .btn-link[disabled]:hover,fieldset[disabled] .navbar-default .btn-link:focus,fieldset[disabled] .navbar-default .btn-link:hover{
-color:#ccc
-}
- 
-.ipsubnet>.panel-heading label{
-color:red;
-}
-.checkboxnav a{
-color:#e6e6fa;
-font-weight:bold;
-}
-
-.btn-success {
-    color: #fff;
-    background-color: #449d44;
-    border-color: #398439;
-}
-.btn-success:hover{
-    color: #fff;
-    background-color: #449d44;
-    border-color: #398439;
-}
-
-.btnlanguage {
-background: transparent;
-color:#000000;
-border-color:#00438c;
-}
-button.btnlanguage:hover {
-background-color: #6d88ad;
-border-color:#00438c;
-}
-button.btnlanguage:focus {
-background-color: #00438c;
-border-color:#00438c;
-}
-.open>.dropdown-toggle.btnlanguage:focus {
-border-color:#00438c;
-}
-
-.flagmenu {
- color: #000000;
-}
-.fa-toggle-on{
-	color:blue;
-}
-.fa-toggle-off{
-	color:gray;
-}
-
-select.input-sm.badged{
-color:#ffffff;
-background:Gray;
-}
-
-.panel-main{
-border-color:#337ab7
-}
-.panel-main>.panel-heading{
-color:#ffffff;background-color:darkBlue;border-color:#337ab7
-}
-.panel-main>.panel-heading+.panel-collapse>.panel-body{
-border-top-color:#337ab7
-}
-.panel-main>.panel-heading .badge{
-color:#337ab7;background-color:#fff
-}
-.panel-main>.panel-footer+.panel-collapse>.panel-body{
-border-bottom-color:#337ab7
-}
-
-.panel-main>.panel-heading.maintitle{
-color:#ffffff;
-}
-.panel-calculation{
-border-color:#ddd;
-}
-.panel-calculation>.panel-heading{
-color:#000000;
-background-color:LightSteelBlue;
-border-color:#ddd;
-}
-.panel-calculation>.panel-heading+.panel-collapse>.panel-body{
-border-top-color:#ddd
-}
-.panel-calculation>.panel-heading .badge{
-color:#f5f5f5;background-color:#333
-}
-.panel-calculation>.panel-footer+.panel-collapse>.panel-body{
-border-bottom-color:#ddd
-}
-
-.panel-text{
-border-color:#ddd
-}
-.panel-text>.panel-heading{
-color:#333;background-color:lightBlue;border-color:#ddd
-}
-.panel-text>.panel-heading+.panel-collapse>.panel-body{
-border-top-color:#ddd
-}
-.panel-text>.panel-heading .badge{
-color:#f5f5f5;background-color:#333
-}
-.panel-text>.panel-footer+.panel-collapse>.panel-body{
-border-bottom-color:#ddd
-}
-
-.panel-info{
-border-color:#ddd
-}
-.panel-info>.panel-heading{
-color:#333;background-color:lightgreen;border-color:#ddd
-}
-.panel-info>.panel-heading+.panel-collapse>.panel-body{
-border-top-color:#ddd
-}
-.panel-info>.panel-heading .badge{
-color:#f5f5f5;background-color:#333
-}
-.panel-info>.panel-footer+.panel-collapse>.panel-body{
-border-bottom-color:#ddd
-}
-
-.panel-example{
-border-color:#ddd
-}
-.panel-example>.panel-heading{
-color:#333;background-color:lime;border-color:#ddd
-}
-.panel-example>.panel-heading+.panel-collapse>.panel-body{
-border-top-color:#ddd
-}
-.panel-example>.panel-heading .badge{
-color:#f5f5f5;background-color:#333
-}
-.panel-example>.panel-footer+.panel-collapse>.panel-body{
-border-bottom-color:#ddd
-}
-
-.textip {
-	color: #000000;
-}
-.textipimport {
-	color: #000000;
-}
-.infotxt {
-	color: #000000;
-}
-
-div.infotxt {
-	border-color: darkgray;
-}
-.textvalid {
-	color:green;
-}
-.infoIPv4v6txt {
-color:gray;
-}
